src-tauri/src/snapshots/agaric_lib__op_log__tests__snapshot_get_ops_since_multiple.snap
---
source: src/op_log.rs
expression: ops
---
- device_id: test-device
  seq: 1
  parent_seqs: ~
  hash: "[HASH]"
  op_type: create_block
  payload: "{\"block_id\":\"BLK-MS01\",\"block_type\":\"content\",\"content\":\"test\",\"parent_id\":null,\"position\":1}"
  created_at: 1736942400000
- device_id: test-device
  seq: 2
  parent_seqs: "[[\"test-device\",1]]"
  hash: "[HASH]"
  op_type: create_block
  payload: "{\"block_id\":\"BLK-MS02\",\"block_type\":\"content\",\"content\":\"test\",\"parent_id\":null,\"position\":1}"
  created_at: 1736942400000
- device_id: test-device
  seq: 3
  parent_seqs: "[[\"test-device\",2]]"
  hash: "[HASH]"
  op_type: create_block
  payload: "{\"block_id\":\"BLK-MS03\",\"block_type\":\"content\",\"content\":\"test\",\"parent_id\":null,\"position\":1}"
  created_at: 1736942400000
