src-tauri/src/snapshots/agaric_lib__op_log__tests__snapshot_op_record_after_create_block.snap
---
source: src/op_log.rs
expression: record
---
device_id: test-device
seq: 1
parent_seqs: ~
hash: "[HASH]"
op_type: create_block
payload: "{\"block_id\":\"BLK-SNAP\",\"block_type\":\"content\",\"content\":\"test\",\"parent_id\":null,\"position\":1}"
created_at: 1736942400000
